# swagger.json
@@ -447,11 +447,12 @@
         }
       }
     },
-    "/api/categories": {
+"/api/categories": {
       "get": {
         "tags": ["Categories"],
         "summary": "Get all categories / Получить все категории",
         "parameters": [],
+        "security": [{ "Bearer": [] }],
         "responses": {
           "200": {
             "description": "Successful operation",
@@ -500,9 +501,9 @@
             "description": "Bad request (invalid request body)",
             "content": {}
           },
-          "409": {
-            "description": "Provided email already exists",
-            "content": {}
+          "401": {
+            "description": "Unauthorized (invalid access token)",
+              "content": {}
           }
         }
       },
@@ -510,6 +511,7 @@
         "tags": ["Categories"],
         "summary": "Add category / Добавление новой категории",
         "parameters": [],
+        "security": [{ "Bearer": [] }],
         "requestBody": {
           "description": "Registration's object",
           "required": true,
@@ -567,6 +569,10 @@
             "description": "Bad request (invalid request body)",
             "content": {}
           },
+          "401": {
+            "description": "Unauthorized (invalid access token)",
+            "content": {}
+          },
           "404": {
             "description": "Validation failed",
             "content": {}
@@ -579,7 +585,7 @@
       }
 
     },
-     "/api/categories/{categoryId}": {
+"/api/categories/{categoryId}": {
             "delete": {
         "tags": ["Categories"],
         "summary": "Delete category / Удаление категории",
@@ -592,6 +598,7 @@
             "type": "string"
           }
         ],
+        "security": [{ "Bearer": [] }],
         "responses": {
           "200": {
             "description": "Successful operation",
@@ -604,15 +611,13 @@
               }
             
           },
+          "401": {
+            "description": "Unauthorized (invalid access token)",
+              "content": {}
+          },
           "404": {
             "description": "Not Found",
-            "content": {
-                "application/json": {
-                "schema": {
-                          "example": {"message": "Not Found"}
-                          } 
-                }
-            }
+            "content": {}
           }
         }
       }
